--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>uom.cp</groupId>
     <artifactId>lab_1</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0-final</version>
 
     <name>lab_1</name>
 
